# cvemapping

./: .gitignore  README.md  cvemapping.go  cvemapping.sh  go.mod  new_directories.json
.github/workflows/: actions.yml
1999/CVE-1999-0016/: README.md  dostool.py
1999/CVE-1999-1053/: CVE-1999-1053-PoC.py  README.md
2000/CVE-2000-0170/: exploit.pl  getenv_addr.c  paper.txt
2001/CVE-2001-0550/: README.md
2001/CVE-2001-0758/: CVE-2001-0758.txt
2001/CVE-2001-0931/: CVE-2001-0931.txt
2001/CVE-2001-0932/: 2_CVE-2001-0932.txt
2001/CVE-2001-0933/: CVE-2001-0933.txt
2001/CVE-2001-0934/: CVE-2001-0934.txt
2001/CVE-2001-3389/: gaston.py
2002/CVE-2002-0200/: CVE-2002-0200.txt  README.md
2002/CVE-2002-0201/: CVE-2002-0201.txt
2002/CVE-2002-0288/: 1_CVE-2002-0288.txt  2_CVE-2002-0288.txt
2002/CVE-2002-0289/: 1_CVE-2002-0289.txt
2002/CVE-2002-0346/: CVE-2002-0346.txt
2002/CVE-2002-0347/: CVE-2002-0347.txt
2002/CVE-2002-0348/: CVE-2002-0348.txt
2002/CVE-2002-0448/: README.md
2002/CVE-2002-0740/: README.md
2002/CVE-2002-0991/: CVE-2002-0991.txt
2002/CVE-2002-1614/: README.md  exploit.c
2003/CVE-2003-0172/: README.md  exploit.py
2015/CVE-2015-8710/: CMakeLists.txt  LICENSE.md  README.md
2015/CVE-2015-8710/src/: CVE_2015_8710.c
data/: 1999.json  2000.json  2001.json  2002.json  2003.json  2004.json  2005.json  2006.json  2007.json  2008.json  2009.json  2010.json  2011.json  2012.json  2013.json  2014.json  2015.json  2016.json  2017.json  2018.json  2019.json  2020.json  2021.json  2022.json  2023.json  2024.json  2025.json  2026.json
(+5603 files in other folders)
