CMAKE_MINIMUM_REQUIRED(VERSION 3.3)
PROJECT(CVE_2015_8710 C)

FIND_PACKAGE(LibXml2 REQUIRED)

INCLUDE_DIRECTORIES(${LIBXML2_INCLUDE_DIR})
INCLUDE_DIRECTORIES(${LIBXML2_LIBRARIES})

SET(SOURCE_FILES "src/CVE_2015_8710.c")
SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY "bin/")
ADD_EXECUTABLE(CVE_2015_8710 ${SOURCE_FILES})
TARGET_LINK_LIBRARIES(CVE_2015_8710 ${LIBXML2_LIBRARIES})
